// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Factory should provide theme config on the child function of EzThemeProvider 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#eee",
    }
  }
/>
`;

exports[`Factory should provide theme config on the child function of EzThemeProvider 2`] = `
<View
  style={
    Object {
      "backgroundColor": "#ff0000",
    }
  }
/>
`;
